Attempting to serve public file on vercel

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="/css/main.css" />
+    <link rel="stylesheet" href="/css/main.css" />
     <title>Lego Collection</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
     <div class="container mx-auto my-5">
       <div
         class="hero min-h-screen"
-        style="background-image: url(./images/944250.jpg)"
+        style="background-image: url(/images/944250.jpg)"
       >
         <div class="hero-overlay bg-opacity-60"></div>
         <div class="hero-content text-center text-neutral-content">
