--- a/views/404.ejs
+++ b/views/404.ejs
@@ -7,8 +7,12 @@
     <title>404</title>
   </head>
   <body>
-    <div class="hero min-h-screen bg-base-200">
-      <div class="hero-content text-center">
+    <div
+      class="hero rounded hero-lg bg-base-200 bg-cover bg-center"
+      style="background-image: url(/images/944250.jpg)"
+    >
+      <div class="hero-overlay bg-opacity-60"></div>
+      <div class="hero-content text-center m-6">
         <div class="max-w-md">
           <h1 class="text-5xl font-bold">404 error</h1>
           <p class="py-6">
