added edit/delete functionality

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,58 +35,51 @@
         <div class="card bg-base-100 shadow-xl rounded overflow-hidden">
           <figure>
             <img
-              src="https://cdn.rebrickable.com/media/thumbs/sets/10214-1/14563.jpg/1000x800p.jpg?1718616252.9490862"
-              alt="Tower Bridge"
+              src="https://cdn.rebrickable.com/media/thumbs/sets/242214-1/134312.jpg/1000x800p.jpg?1721137602.6961424"
+              alt="SpiderMan"
               class="w-full"
             />
           </figure>
           <div class="card-body flex flex-col justify-between">
-            <h2 class="card-title">Tower Bridge</h2>
-            <p>
-              This set was unveiled by the designer, Jamie Berard, in person at
-              Brickfair Virginia in August 2010. Tower Bridge is amongst the
-              landmarks depicted in the 21034-1 London Architecture Skyline set.
-            </p>
+            <h2 class="card-title">Spider-Man</h2>
+            <p>Foil bag coming with LEGO Spider-Man Magazine no. 1, 2021</p>
             <div class="card-actions justify-end">
-              <a class="btn btn-primary" href="/lego/sets/10214-1">Details</a>
+              <a class="btn btn-primary" href="/lego/sets/242214-1">Details</a>
             </div>
           </div>
         </div>
         <div class="card bg-base-100 shadow-xl rounded overflow-hidden">
           <figure>
             <img
-              src="https://cdn.rebrickable.com/media/thumbs/sets/10217-1/48433.jpg/1000x800p.jpg?1718790189.1973932"
-              alt="Diagon Alley"
+              src="https://cdn.rebrickable.com/media/thumbs/sets/242216-1/134314.jpg/1000x800p.jpg?1721036298.5665202"
+              alt="Carnage"
               class="w-full"
             />
           </figure>
           <div class="card-body flex flex-col justify-between">
-            <h2 class="card-title">Diagon Alley</h2>
-            <p>
-              Depicts the following locations: * Borgin and Burke's * Gringott's
-              Bank * Ollivander's Wand Shop
-            </p>
+            <h2 class="card-title">Carnage</h2>
+            <p>Came with issue 2 of the LEGO Spiderman magazine.</p>
             <div class="card-actions justify-end">
-              <a class="btn btn-primary" href="/lego/sets/10217-1">Details</a>
+              <a class="btn btn-primary" href="/lego/sets/242216-1">Details</a>
             </div>
           </div>
         </div>
         <div class="card bg-base-100 shadow-xl rounded overflow-hidden">
           <figure>
             <img
-              src="https://cdn.rebrickable.com/media/thumbs/sets/10127-1/1885.jpg/1000x800p.jpg?1718828250.473967"
-              alt="NHL Action Set with Stickers"
+              src="https://cdn.rebrickable.com/media/thumbs/sets/242319-1/134319.jpg/1000x800p.jpg?1720722775.1855025"
+              alt="Groot"
               class="w-full"
             />
           </figure>
           <div class="card-body flex flex-col justify-between">
-            <h2 class="card-title">NHL Action Set with Stickers</h2>
+            <h2 class="card-title">Groot</h2>
             <p>
-              This set includes three alternative face masks and six different
-              color choices for shoulder pads.
+              Attached to LEGO Marvel Avengers magazine (2023), nr. 3 (Dutch,
+              EAN 8710823007569). French edition from September 2023.
             </p>
             <div class="card-actions justify-end">
-              <a class="btn btn-primary" href="/lego/sets/10127-1">Details</a>
+              <a class="btn btn-primary" href="/lego/sets/242319-1">Details</a>
             </div>
           </div>
         </div>
