--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -17,6 +17,14 @@
           >About</a
         >
       </li>
+
+      <li>
+        <a
+          class="<%= (page == '/lego/addSet') ? 'active' : '' %>"
+          href="/lego/addSet"
+          >Add to Collection</a
+        >
+      </li>
     </ul>
   </div>
 </div>
