--- a/views/sets.ejs
+++ b/views/sets.ejs
@@ -49,7 +49,7 @@
       </td>
       <td>
       <div class="flex">
-      <p><%= set.theme %></p>
+      <p><%= set.Theme.name %></p>
       </div>
       </td>
       <td>
