--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -18,13 +18,59 @@
         >
       </li>
 
+      <% if(session.user) { %>
       <li>
+        <details>
+          <summary>Account: <%= session.user.userName %></summary>
+          <ul class="p-2 right-0">
+            <li>
+              <a
+                class="<%= (page == '/lego/addSet') ? 'active' : '' %>"
+                href="/lego/addSet"
+                >Add to Collection</a
+              >
+            </li>
+            <li>
+              <a
+                class="<%= (page == '/userHistory') ? 'active' : '' %>"
+                href="/userHistory"
+                >User History</a
+              >
+            </li>
+            <li><a href="/logout">Log Out</a></li>
+          </ul>
+        </details>
+      </li>
+      <% } %> <% if(!session.user) { %>
+      <li>
+        <details>
+          <summary>Account</summary>
+          <ul class="p-2 right-0">
+            <li>
+              <a class="<%= (page == '/login') ? 'active' : '' %>" href="/login"
+                >Login</a
+              >
+            </li>
+            <li>
+              <a
+                class="<%= (page == '/register') ? 'active' : '' %>"
+                href="/register"
+                >Register</a
+              >
+            </li>
+          </ul>
+        </details>
+      </li>
+      <% } %>
+    </ul>
+  </div>
+</div>
+<!-- 
+   <li>
         <a
           class="<%= (page == '/lego/addSet') ? 'active' : '' %>"
           href="/lego/addSet"
           >Add to Collection</a
         >
       </li>
-    </ul>
-  </div>
-</div>
+ -->
