--- a/views/set.ejs
+++ b/views/set.ejs
@@ -46,9 +46,11 @@
             <br />
             "<span class="content"></span>"
           </p>
+          <% if(session.user) { %>
           <a class="btn btn-primary" href="/lego/editSet/<%= set.set_num %>"
             >Edit</a
           >
+          <% } %>
           <a
             class="btn btn-primary mt-3"
             href="#"
